tests/specs/test/unresolved_promise/main.out
[WILDCARD]
./main.ts (uncaught error)
error: Top-level await promise never resolved
await new Promise((_resolve, _reject) => {});
^
    at <anonymous> ([WILDCARD]/main.ts:1:1)
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.
[WILDCARD]
error: Test failed
