tests/specs/test/unresolved_promise/main.ts
await new Promise((_resolve, _reject) => {});
